manifest/objects/ALTF__Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__DC_CompetitivePosition__c</fullName>
        <inlineHelpText>Degree to which we are in a superior position on the most important 2 decision criteria. Strong if superior on both, OK if superior on one and neutral on the other.</inlineHelpText>
        <label>Decision Criteria Top Criteria Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__DC_Completeness__c</fullName>
        <inlineHelpText>Degree to which we have understood the relative priority of decision criteria for the Key Players. OK if at least one criterion per Key Player prioritized.</inlineHelpText>
        <label>Decision Criteria Key Player Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__DC_Differentiation__c</fullName>
        <inlineHelpText>Degree to which we are in a superior position on the aggregated decision criteria of the stakeholders. All Stronger if we are superior on all. All Equal if we are equal on all. Some Stronger if we are stronger on some.</inlineHelpText>
        <label>Decision Criteria Differentiation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Equal</fullName>
                </value>
                <value>
                    <fullName>None Stronger</fullName>
                </value>
                <value>
                    <fullName>All Stronger</fullName>
                </value>
                <value>
                    <fullName>Some Stronger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__DC_Quantity__c</fullName>
        <formula>&apos;None&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Buckets the number of decision criteria into None, Low (1-3), Medium (4-7) or High (8+)</inlineHelpText>
        <label>Decision Criteria Quantity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__DaysSinceLastModification__c</fullName>
        <formula>MIN(TODAY() - Datevalue(ALTF__Opportunity__r.LastModifiedDate), TODAY() - DATEVALUE(LastModifiedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days since the opportunity was last modified.  
Warning: this may not always be reliable as information *related* to the opportunity may be updated without being reflected here.</inlineHelpText>
        <label>Days Since Last Modification</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Days_Since_Previous_Test_Improve__c</fullName>
        <formula>IF(ISBLANK(DMMAX__TI_Last_Completed_Scheduled_Review__c), 0, MAX(0, TODAY() - DMMAX__TI_Last_Completed_Scheduled_Review__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Previous Test &amp; Improve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Days_To_Next_Test_Improve__c</fullName>
        <formula>IF(ISBLANK(DMMAX__TI_Earliest_Scheduled_Review__c), 0, MAX(0, DMMAX__TI_Earliest_Scheduled_Review__c - TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Next Test &amp; Improve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__EarliestPRIME__c</fullName>
        <label>Earliest PRIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__GEN_DaysToClose__c</fullName>
        <formula>IF(ALTF__Opportunity__r.IsClosed,
0, 
ALTF__Opportunity__r.CloseDate - TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days between today and the opportunity close date</inlineHelpText>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__GEN_OpportunityAge__c</fullName>
        <formula>IF(ALTF__Opportunity__r.IsClosed,( 
ALTF__Opportunity__r.CloseDate - DATEVALUE(ALTF__Opportunity__r.CreatedDate)), 
TODAY() - DATEVALUE(ALTF__Opportunity__r.CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the opportunity was created</inlineHelpText>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__GEN_Phase__c</fullName>
        <inlineHelpText>Opportunity phase - Early, Mid or Late in the Sales Cycle.</inlineHelpText>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early</fullName>
                    <default>true</default>
                    <label>Early</label>
                </value>
                <value>
                    <fullName>Mid</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__IM_InsightMapOwnerAwareness__c</fullName>
        <inlineHelpText>All if all Insight Map owners are on the Relationship Map. Some if some Insight Map owners are on the Relationship Map.</inlineHelpText>
        <label>Insight Map Owner Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Some</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__IM_KeyPlayerInsights__c</fullName>
        <inlineHelpText>OK if more than 50% of Key Players are tied to goals and initiatives on the Insight Map. Low if less than 50% but more than 0 Key Players own goals and initiatives.</inlineHelpText>
        <label>Insight Map Key Player Presence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__IM_KeyPlayerIssueCoverage__c</fullName>
        <inlineHelpText>None (no owners on any goals or initiatives)
General (some owners, none are Key Players)
Some Key Players (some Key Player owners)
All Key Players (all goals and initiatives owned by Key Players)</inlineHelpText>
        <label>Insight Map Goals and Initiatives Owners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Some Key Players</fullName>
                </value>
                <value>
                    <fullName>All Key Players</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__IM_MapCompleteness__c</fullName>
        <inlineHelpText>OK if 1 goal, 1 pressure, 1 initiative and 1 obstacle confirmed and 33% of Goals and Initiatives (total) are Key Players. Otherwise Low if not completely Empty.</inlineHelpText>
        <label>Insight Map Completeness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__IsDirty__c</fullName>
        <formula>IF ( $Setup.DMMAX__DIESetting__c.DMMAX__Disable_Phase_Trigger__c , false, 
IF (  ISPICKVAL(DMMAX__GEN_Phase__c, &apos;Closed&apos;) &amp;&amp; DMMAX__Probability_Phase__c != &apos;Closed&apos;, true,
IF (  ISPICKVAL(DMMAX__GEN_Phase__c, &apos;Early&apos;) &amp;&amp; DMMAX__Probability_Phase__c != &apos;Early&apos;, true,
IF (  ISPICKVAL(DMMAX__GEN_Phase__c, &apos;Mid&apos;) &amp;&amp; DMMAX__Probability_Phase__c != &apos;Mid&apos;, true,
IF (  ISPICKVAL(DMMAX__GEN_Phase__c, &apos;Late&apos;) &amp;&amp; DMMAX__Probability_Phase__c != &apos;Late&apos;, true,
false)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsDirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_ContactLevelGeneralContact__c</fullName>
        <inlineHelpText>None = No contacts with meaningful (multiple or in-depth) coverage (or no contacts), Limited = 50% or less contacts with meaningful coverage, OK = More than 50% of contacts with meaningful coverage</inlineHelpText>
        <label>Contact Level - General Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_DecisionMakerContact__c</fullName>
        <inlineHelpText>OK if you have meaningful contact with 50%+ of the Decision Makers and Limited if you have meaningful contact with less than 50% of the Decision Makers</inlineHelpText>
        <label>Decision Maker Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_DecisionMakerCount__c</fullName>
        <inlineHelpText>The number of Decision Makers on the Relationship Map</inlineHelpText>
        <label>Decision Maker Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_DecisionMakerNonSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Majority of Decision Makers have a negative preference for you (as opposed to no preference or positive preference)</inlineHelpText>
        <label>Decision Maker Non-Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_DecisionMakerSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Majority of Decision Makers have a preference for you (as opposed to no preference or negative preference)</inlineHelpText>
        <label>Decision Maker Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_Enemy__c</fullName>
        <inlineHelpText>Key Player if a Key Player on the Relationship Map is an enemy. Otherwise General if a non Key Player contact on the Relationship Map is an enemy.</inlineHelpText>
        <label>Enemy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_KeyPlayerCount__c</fullName>
        <inlineHelpText>Count of Key Players on the Relationship Map</inlineHelpText>
        <label>Key Player Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_Mentor__c</fullName>
        <inlineHelpText>Key Player if a Key Player on the Relationship Map is your Mentor. Otherwise General if a non Key Player is your Mentor.</inlineHelpText>
        <label>Mentor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_NegativeContactCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Count of non-supporters and enemy contacts on the political map.</inlineHelpText>
        <label>Negative Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_NonSupport__c</fullName>
        <inlineHelpText>Key Player if the majority of Key Players have a negative preference for you. General if the majority of contacts on the Relationship Map have a negative preference. Some if 1 or more contacts have a negative preference.</inlineHelpText>
        <label>Neg. Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Some</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_Non_Supporter__c</fullName>
        <inlineHelpText>Key Player if a Key Player on the Relationship Map is a Non Supporter. Otherwise General if a non Key Player is a Non Supporter.</inlineHelpText>
        <label>Non Supporter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_PositiveContactCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Count of mentors and supporters on the political map.</inlineHelpText>
        <label>Positive Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__POL_SingleThreaded__c</fullName>
        <inlineHelpText>OK if you have meaningful contact with 33%+ of the Key Players or Limited if you have meaningful contact with any of the Key Players</inlineHelpText>
        <label>Key Player Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_Support__c</fullName>
        <inlineHelpText>Key Player if the majority of Key Players prefer you. General if the majority of contacts on the Relationship Map prefer you. Some if 1 or more contacts prefer you.</inlineHelpText>
        <label>Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
                <value>
                    <fullName>Some</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__POL_Supporter__c</fullName>
        <inlineHelpText>Key Player if a Key Player on the Relationship Map is a Supporter. Otherwise General if a non Key Player is your Supporter.</inlineHelpText>
        <label>Supporter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Key Player</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__PRIME_Completeness__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PRIME Completeness Score</description>
        <label>PRIME Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__PRIME_Overdue__c</fullName>
        <formula>ISNULL(DMMAX__EarliestPRIME__c) == false &amp;&amp; DATEVALUE(DMMAX__EarliestPRIME__c) &lt; today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRIME Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Probability_Phase__c</fullName>
        <formula>If(ALTF__Opportunity__r.IsClosed, &apos;Closed&apos;, 
If (ALTF__Opportunity__r.Probability &gt; $Setup.DMMAX__DIESetting__c.DMMAX__OM_Phase_Late__c, &apos;Late&apos;,
If (ALTF__Opportunity__r.Probability &gt; $Setup.DMMAX__DIESetting__c.DMMAX__OM_Phase_Mid__c, &apos;Mid&apos;,
&apos;Early&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Relationship_Map_Completeness__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Relationship Map Completeness Score</description>
        <label>Relationship Map Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__Relationship_Map_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of contacts on map</description>
        <label>Relationship Map Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Strategy_Completeness__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Strategy Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__TAS01__c</fullName>
        <inlineHelpText>Yes: An initiative with resources assigned by a key player has been confirmed.</inlineHelpText>
        <label>TAS01- Customer Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__TAS02__c</fullName>
        <inlineHelpText>Yes: The customer is in your sweet spot or target market.</inlineHelpText>
        <label>TAS02 - Customer Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__TAS03__c</fullName>
        <inlineHelpText>Yes: Financial information is compatible with the Customer Project.</inlineHelpText>
        <label>TAS03 - Financial Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__TI_Completed_Count__c</fullName>
        <label>Completed Test and Review Count</label>
        <summaryFilterItems>
            <field>ALTF__Test_And_Improve__c.ALTF__Is_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ALTF__Test_And_Improve__c.ALTF__Altify_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMMAX__TI_Earliest_Scheduled_Review__c</fullName>
        <label>TI Earliest Scheduled Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMMAX__TI_Last_Completed_Scheduled_Review__c</fullName>
        <label>TI Last Completed Scheduled Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMMAX__TI_Status__c</fullName>
        <formula>IF(ISBLANK(DMMAX__TI_Earliest_Scheduled_Review__c) &amp;&amp; ISBLANK(DMMAX__TI_Last_Completed_Scheduled_Review__c), &apos;None&apos;,
IF(ISBLANK(DMMAX__TI_Earliest_Scheduled_Review__c) &amp;&amp; !ISBLANK(DMMAX__TI_Last_Completed_Scheduled_Review__c), &apos;Complete&apos;,
IF(DMMAX__TI_Earliest_Scheduled_Review__c &lt; TODAY(), &apos;Overdue&apos;, &apos;Scheduled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scheduled: T&amp;I schedule date is today or in the future. Overdue: T&amp;I schedule date is in the past. None: No open T&amp;I scheduled.</inlineHelpText>
        <label>Test &amp; Improve Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Tasks_E__c</fullName>
        <inlineHelpText>Number open &quot;Emphasize Strength&quot; tasks</inlineHelpText>
        <label>Tasks E</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Tasks_I__c</fullName>
        <inlineHelpText>Number open &quot;Insulate against competition&quot; tasks</inlineHelpText>
        <label>Tasks I</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Tasks_M__c</fullName>
        <inlineHelpText>Number open &quot;Minimize Weakness&quot; tasks</inlineHelpText>
        <label>Tasks M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Tasks_P__c</fullName>
        <inlineHelpText>Number open &quot;Prove your value&quot; tasks</inlineHelpText>
        <label>Tasks P</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Tasks_R__c</fullName>
        <inlineHelpText>Number of open &quot;Retrieve missing information&quot; tasks</inlineHelpText>
        <label>Tasks R</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Opportunity</label>
    <nameField>
        <label>Altify Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>